--- a/translations/en.json
+++ b/translations/en.json
@@ -182,7 +182,7 @@
     "chat-with-friends": "Chat privately with friends",
     "chats": "Chats",
     "check-before-syncing": "Check before syncing",
-    "check-before-syncing-doc-description" :"To sync your devices successfully, make sure to check and complete these steps:",
+    "check-before-syncing-doc-description": "To sync your devices successfully, make sure to check and complete these steps:",
     "check-before-syncing-doc-checkbox-1": "Connect both devices to the same network",
     "check-before-syncing-doc-checkbox-2": "Make sure you are logged in on the other device",
     "check-before-syncing-doc-checkbox-3": "Disable the firewall and VPN on your devices",
@@ -2007,7 +2007,7 @@
     "slippage-may-be-higher-than-necessary": "Slippage may be higher than necessary",
     "slippage-should-be-more-than-0": "Slippage should be more than 0",
     "max-2-decimals": "Max. 2 decimals",
-    "type-slippage":  "Type slippage",
+    "type-slippage": "Type slippage",
     "receive-at-least": "Receive at least",
     "select-token-to-swap": "Select token to Swap",
     "select-token-to-receive": "Select token to receive",
@@ -2651,6 +2651,7 @@
     "testnet-not-available": "Testnet not available",
     "bridged-to": "Bridged to {{network}}",
     "slide-to-bridge": "Slide to bridge",
+    "slide-to-swap": "Slide to swap",
     "provider-is-down": "The provider for the following chain(s) is down: {{chains}}",
     "unknown": "Unknown",
     "unsupported-file": "Unsupported file",
@@ -2746,12 +2747,15 @@
     "add-preferences": "Add preferences",
     "buy-eth": "Buy ETH",
     "not-enough-assets": "Not enough assets to pay gas fees",
-    "send-from-network" : "Send from {{network}}",
-    "define-amount-sent-from-network" : "Define amount sent from {{network}} network",
+    "send-from-network": "Send from {{network}}",
+    "define-amount-sent-from-network": "Define amount sent from {{network}} network",
     "dont-auto-recalculate-network": "Don't auto recalculate {{network}}",
     "import-keypair-to-use-account": "Import key pair to use this account",
     "import-keypair-steps": "{{account-name}} was derived from your {{keypair-name}} key pair, which has not yet been imported to this device. To transact using this account, you will need to import the {{keypair-name}} key pair first.",
     "not-now": "Not now",
     "share-usage-data": "Share usage data with Status",
-    "value-higher-than-send-amount": "This value is higher than entered amount to send"
+    "value-higher-than-send-amount": "This value is higher than entered amount to send",
+    "swaps-powered-by": "Swaps powered by {{provider}}",
+    "max-slippage": "Max slippage",
+    "pay": "Pay"
 }
