--- a/translations/en.json
+++ b/translations/en.json
@@ -2634,8 +2634,10 @@
   "wallet-connect-networks-not-supported": "{{dapp}} requires an unsupported network.",
   "wallet-connect-no-internet-warning": "Oops, you have no internet. Try again later!",
   "wallet-connect-proposal-description": "By connecting you allow {{name}} to retrieve your account address and enable Web3",
+  "wallet-connect-proposal-expired": "WalletConnect proposal has expired",
   "wallet-connect-proposal-title": "Would like to connect with your wallet",
   "wallet-connect-qr-expired": "WalletConnect QR has expired",
+  "wallet-connect-request-expired": "WalletConnect request has expired",
   "wallet-connect-send-transaction-header": "wants you to send this transaction with",
   "wallet-connect-send-transaction-warning": "Send transactions only if you trust the dApp",
   "wallet-connect-sign-message-header": "wants you to sign the message with",
