--- a/translations/en.json
+++ b/translations/en.json
@@ -142,6 +142,7 @@
   "approved-amount-symbol": "Approved {{amount}} {{symbol}}",
   "approving-amount-symbol": "Approving {{amount}} {{symbol}}...",
   "apr": "Apr",
+  "arbiscan": "Arbiscan",
   "arbitrum": "Arbitrum",
   "are-not-allowed": "{{check} are not allowed",
   "are-you-sure": "Are you sure?",
@@ -975,6 +976,7 @@
   "ethereum-address": "Ethereum address",
   "ethereum-node-started-incorrectly-description": "Ethereum node was started with incorrect configuration, application will be stopped to recover from that condition. Configured network id = {{network-id}}, actual = {{fetched-network-id}}",
   "ethereum-node-started-incorrectly-title": "Ethereum node started incorrectly",
+  "etherscan": "Etherscan",
   "etherscan-lookup": "Look up on Etherscan",
   "everyone": "Everyone",
   "everyone-mention": "everyone",
@@ -1760,6 +1762,7 @@
   "oops-this-qr-does-not-contain-an-address": "Oops! This QR does not contain an address",
   "oops-wrong-password": "Oops, wrong password!",
   "oops-wrong-word": "Oops! Wrong word",
+  "op-explorer": "OP Explorer",
   "open": "Open",
   "open-chat": "Open chat",
   "open-dapp": "Open ÐApp",
@@ -2620,6 +2623,7 @@
   "wakuv2-node-format": "/ip4/{node-ip}/tcp/{port}/p2p/{id}",
   "wakuv2-settings": "Waku v2 settings",
   "wallet": "Wallet",
+  "wallet-activity-beta-message": "Activity is in beta. If transactions are missing, check",
   "wallet-address": "Wallet address",
   "wallet-asset": "Asset",
   "wallet-assets": "Assets",
